--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">RestourantApp</string>
+    <string name="TermsofUse">
+        By selecting "Continue", or signing in with Facebook or Google, you agree to the terms and conditions of te RestouranApp Terms of Use and Privacy Policy.
+
+    </string>
 </resources>
