Added  basic functionality Cart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
 
     </string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="About_Restaurant">About the Restaurant</string>
+    <string name="MapsAPIKey">AIzaSyBnFQiwyy26b4_7hdlmhdrA5YwOUtQm3Oc</string>
+
 </resources>
