--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
 
     <string name="About_Restaurant">About the Restaurant</string>
     <string name="MapsAPIKey">AIzaSyBnFQiwyy26b4_7hdlmhdrA5YwOUtQm3Oc</string>
+    <string name="Add_on">Addon</string>
 
 </resources>
